eslint prettier and editor configs

--- a/.prettierignore
+++ b/.prettierignore
@@ -5,10 +5,18 @@ demo/lib/**
 content/images/**
 content/dziimages/**
 LICENSE
+.browserslistrc
 .editorconfig
+.env
 .eslintignore
 .gitattributes
 .gitignore
 .npmignore
 .prettierignore
 package-lock.json
+*.config
+*.ico
+*.jpg
+*.gif
+*.png
+*.txt
