--- a/.editorconfig
+++ b/.editorconfig
@@ -9,8 +9,8 @@ insert_final_newline = true
 trim_trailing_whitespace = true
 
 [*.html]
-indent_style = space
-indent_size = 2
+indent_style = tab
+indent_size = 4
 end_of_line = lf
 charset = utf-8
 trim_trailing_whitespace = true
