--- a/.eslintignore
+++ b/.eslintignore
@@ -6,5 +6,14 @@ demo/lib/**
 content/images/**
 content/dziimages/**
 LICENSE
+*.config
 *.md
 *.json
+*.ico
+*.gif
+*.jpg
+*.png
+*.txt
+*.css
+*.scss
+*.html
